2018-09-27  Richard Biener  <rguenther@suse.de>

	PR debug/37801
	PR debug/87440
	* gcc.dg/debug/dwarf2/inline2.c: Adjust.
	* gcc.dg/debug/dwarf2/inline4.c: New testcase.

2018-09-27  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/67544
	* g++.dg/concepts/pr67544.C: New.

2018-09-27  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/84940
	* g++.dg/expr/unary4.C: New.

2018-09-26  Indu Bhagat  <indu.bhagat@oracle.com>

	PR gcov-profile/86957
	* gcc.dg/Wmissing-profile.c: New test.

2018-09-26  Joseph Myers  <joseph@codesourcery.com>

	PR c/87390
	* gcc.target/i386/excess-precision-9.c,
	gcc.target/i386/excess-precision-10.c: New tests.

2018-09-26  Richard Biener  <rguenther@suse.de>

	PR debug/87443
	* gcc.dg/debug/dwarf2/inline5.c: New testcase.

2018-09-26  Martin Jambor  <mjambor@suse.cz>

	PR c/87347
	* gcc.dg/pr87347.c: New test.

2018-09-26  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/71131
	* g++.dg/concepts/pr71131.C: New.

2018-09-26  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/71127
	* g++.dg/concepts/pr71127.C: New.

2018-09-26  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/67655
	* g++.dg/concepts/pr67655.C: New.

2018-09-26  Thomas Quinot  <quinot@adacore.com>

	* gnat.dg/sso13.adb: New testcase.

2018-09-26  Justin Squirek  <squirek@adacore.com>

	* gnat.dg/warn16.adb: New testcase.

2018-09-26  Hristian Kirtchev  <kirtchev@adacore.com>

	* gnat.dg/elab7.adb, gnat.dg/elab7_pkg1.adb,
	gnat.dg/elab7_pkg1.ads, gnat.dg/elab7_pkg2.adb,
	gnat.dg/elab7_pkg2.ads: New testcase.

2018-09-26  Javier Miranda  <miranda@adacore.com>

	* gnat.dg/interface8.adb, gnat.dg/interface8.ads: New testcase.

2018-09-26  Ed Schonberg  <schonberg@adacore.com>

	* gnat.dg/predicate2-containers.ads,
	gnat.dg/predicate2-project-name_values.ads,
	gnat.dg/predicate2-project-registry-attribute.ads,
	gnat.dg/predicate2-project-registry.ads,
	gnat.dg/predicate2-project-typ-set.ads,
	gnat.dg/predicate2-project-typ.ads,
	gnat.dg/predicate2-project.ads,